--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -7,7 +7,7 @@
       <span class="text-2xl font-bold font-poppins">AKASH</span>
       <span
         class="bg-gray-600 rounded-3xl px-5 py-2 lg:font-medium sm:text-sm sm:text-nowrap sm:px-3"
-        >Frontend Developer</span
+        >Web Developer</span
       >
     </div>
     <hr class="outline-1 w-full my-6 rounded-lg outline-slate-300" />
